# yes-daw

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  README-alpha.md  README.md  SETUP.md  STATUS.md  VERA-SHIP-PLAN.md  product.md  rtsan_suppressions.txt
.github/workflows/: ci.yml
bootstrap/: windows.ps1
docs/: README.md  alpha-gate.md  ci-mechanical-verification.md  reality-lane.md
docs/adr/: 0001-record-architecture-decisions.md  0002-realtime-engine-foundations.md  0003-product-full-multitrack-daw.md  0004-stack-juce-framework-own-engine.md  0005-mechanical-verification-and-ci-gates.md  0006-immutable-snapshot-concurrency.md  0007-compiledgraph-and-pdc.md  0008-node-contract.md  0009-event-stream-and-automation.md  0010-time-model-and-sample-rate.md  0011-asset-clip-project-and-ids.md  0012-sqlite-bundle-schema-and-atomicity.md  0013-plugin-state-and-hosting-isolation.md  0014-mixer-policy-solo-mute-sidechain.md  0015-plugin-hosting-runtime-ipc-and-process-model.md  0016-mute-mask-scales-past-64-nodes.md  0017-midi-clip-edit-model-and-render-bridge.md  0018-recording-latency-and-take-writer.md  0019-h6-reliability-gate.md  0020-roadmap-horizons-h7-h10.md  0021-offline-render-export-format.md  0022-playback-transport-model.md  0023-transport-command-queue.md  0024-deterministic-engine-scheduler.md  0025-blacklist-on-failure-action.md  0026-built-in-instrument-track-autowire.md  0027-scheduler-block-parallel-safety-guard.md  0028-loudness-metering-model.md  0029-dawproject-export-subset.md  0030-time-stretch-node.md  0031-device-hot-swap-survival.md  0032-h11-ui-stack-and-app-shell.md  0033-h12-operable-session-ux.md  0034-mixer-state-schema-and-persistence.md  0035-h13-recording-and-device-ux.md  0036-recorded-audio-assets-and-takes.md  0037-alpha-target-and-h14-h19-recarve.md  0038-built-in-fx-suite.md  0039-automation-lanes-runtime.md  README.md  (+1 more)
docs/brainstorms/: 2026-06-23-direction-brainstorm.md
docs/checklists/: 2026-07-09-h16-owner-closeout-checklist.md
docs/fable5/: framework.md  implementer-brief.md  upgrade-patch.md  yes-daw.md
docs/goals/: README.md  risk-register.md  roadmap.md
docs/plans/: 2026-06-23-compiledgraph-compiler-design.md  2026-06-23-feat-yes-daw-architecture-roadmap-plan.md  2026-06-23-yes-daw-deepening-notes.md  2026-06-26-h3-close-out-plan.md  2026-06-27-h4-midi-editing-instruments-plan.md  2026-06-28-h10-mixing-mastering-interchange-plan.md  2026-06-28-h5-recording-plan.md  2026-06-28-h6-reliability-plan.md  2026-06-28-h7-offline-render-export-plan.md  2026-06-28-h8-playback-runtime-plan.md  2026-06-28-h9-engine-scaling-robustness-plan.md  2026-06-29-h11-single-window-timeline-ui-plan.md  2026-06-29-h12-operable-session-ux-plan.md  2026-06-30-h13-recording-device-ux-plan.md  2026-07-03-h14-fx-suite-plan.md  2026-07-03-h15-automation-plan.md  2026-07-03-h16-real-ui-plan.md  2026-07-03-h17-distribution-alpha-plan.md  2026-07-07-h16-cp2-async-waveform-cache-plan.md  2026-07-13-h17-cp1-selfcheck-notes.md
docs/research/: Building-a-Modern-DAW-Research-2026.md  Modern DAW Architecture Research.md  compass_artifact_wf-586f3f9f-cbee-4a26-9812-a527f559a9c9_text_markdown.md
docs/reviews/: 2026-06-29-adversarial-review-h11-h12.md  2026-07-03-adversarial-review-h14-h17-packet.md  2026-07-05-h14-cp10-closeout-adversarial-review.md  2026-07-06-h15-closeout-adversarial-review.md
docs/solutions/: h0-build-and-ci-gotchas.md
loop/: PROMPT.md  horizon.md
src/: Main.cpp
src/analysis/: LoudnessMeter.h
src/app/: SelfCheck.h  SelfCheckMain.cpp
src/dsp/: LinearRamp.h  ScopedNoDenormals.h  SineSource.h
src/engine/: Automation.h  ClipEnvelope.h  Command.h  CompiledGraph.h  DeviceHotSwap.h  GraphBuilder.h  GraphScheduler.h  Midi.h  MixerGraphProjection.h  MixerMutePolicy.h  MixerValue.h  Node.h  OfflineRenderer.h  ParamSpec.h  PlaybackEngine.h  Project.h  ProjectMixerProjection.h  ProjectUndo.h  Recording.h  Reliability.h  Runtime.h  RuntimeAudioDriver.h  Time.h  TimeStretch.h
src/engine/nodes/: CompressorNode.h  DecodedClipNode.h  DecodedMidiClipNode.h  DelayNode.h  EqNode.h  FaderNode.h  FxDelayNode.h  IdentityDcNode.h  ImpulseInstrumentNode.h  LimiterNode.h  MasterNode.h  MeterNode.h  MidiEffectNode.h  OscillatorNode.h  (+6 more)
src/interchange/: DawprojectPackage.h  DawprojectPrimitives.h  StoredZip.h
src/io/: WavFile.h
src/persistence/: AutosaveRecovery.h  PlaybackAutosave.h  PluginFailureBlacklist.h  ProjectBundle.h  WaveformPeakCache.h
src/plugin_host/: PluginHostCoordinator.h  PluginHostCoordinatorCheck.cpp  PluginHostMain.cpp  PluginHostProtocol.h
src/rt/: RtHot.h
src/ui/: MainComponent.cpp  MainComponent.h  TimelineCanvas.h  TimelineLayout.h  UiAccessibility.h  UiActions.h  UiAppModel.h  UiIcons.h  UiMixerSurface.h  UiPianoRollSurface.h  UiTheme.h  UiThemeLayout.h  UiTimelineEdits.h  WaveformColumns.h  WaveformPeakService.h  YesDawLookAndFeel.h
tests/: accessibility_tests.cpp  app_smoke_tests.cpp  automation_tests.cpp  builder_tests.cpp  bundle_render_tests.cpp  compiledgraph_tests.cpp  compressor_tests.cpp  dawproject_package_tests.cpp  dawproject_primitives_tests.cpp  delaynode_tests.cpp  device_hot_swap_tests.cpp  dsp_tests.cpp  eq_tests.cpp  event_tests.cpp  fader_tests.cpp  fx_automation_tests.cpp  fx_delay_tests.cpp  fx_suite_tests.cpp  host_isolation_tests.cpp  limiter_tests.cpp  loudness_tests.cpp  meter_tests.cpp  midi_timing_tests.cpp  mixer_mute_policy_tests.cpp  mixer_projection_tests.cpp  node_tests.cpp  offline_render_tests.cpp  pan_tests.cpp  param_tests.cpp  persistence_tests.cpp  playback_tests.cpp  plugin_node_tests.cpp  project_tests.cpp  recording_tests.cpp  recording_ux_tests.cpp  reliability_tests.cpp  render_tests.cpp  reverb_tests.cpp  rt_lane_tests.cpp  runtime_audio_driver_tests.cpp  (+15 more)
tests/golden/: sine_440_48k.csv
tools/: alpha-verify.ps1  alpha-verify.sh  launch-h11.ps1  launch-h11.sh  package.ps1  package.sh  playback-smoke.ps1  playback-smoke.sh  soak.ps1  soak.sh  ui-frame-smoke.ps1  ui-screenshot.ps1
tools/soak/: SoakMain.cpp
(+4 files in other folders)
